@@ -455,6 +455,21 @@
 }
 
 .single-lsx-to-team {
+	&:not(.page-has-banner) {
+		.banner-single {
+			display: none;
+		}
+		.team-navigation {
+			margin-top: 50px;
+		}
+		@media (max-width:1199px) {
+			#summary {
+				> .lsx-to-section-title {
+					margin-top: 50px;
+				}
+			}
+		}
+	}
 	.lsx-to-team-name { margin-bottom: 1.2rem; }
 
 	.lsx-to-team-contact:not(.dropdown) {
