@@ -3,6 +3,7 @@
 ### 1.3.1 - In Development
 * Dev - Added in a parameter to lsx_to_enquire_modal() to allow a form_id to be specified
 * Dev - Allowing the modal to be disabled in lsx_to_enquire_modal via a parameter
+* Dev - Styles for single team page if banner is disabled.
 
 ### 1.3.0 - 2 October 2019
 * Fix - Fixed the Post Type enquiry dropdown.
